--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-/* body */
+
 body {
   background: #f2f2f2;
 }
@@ -8,7 +8,6 @@ footer {
   margin-top: 40px;
 }
 
-/* navbar */
 .navbar {
   background-color: #fff;
 }
@@ -17,7 +16,6 @@ footer {
   height: 40px;
 }
 
-/* cover */
 .cover {
   margin-top: -20px;
   margin-bottom: 20px;
@@ -42,4 +40,28 @@ footer {
   color: #fff;
   font-weight: bold;
   letter-spacing: 0.15em;
+}
+
+.search {
+  margin-bottom: 20px;
+}
+
+.item .panel-body {
+  height: 70px;
+}
+
+.item .panel-heading {
+  height: 250px;
+}
+
+.item .panel-heading img {
+  height: 100%;
+  max-width: 100%;
+}
+
+p.item-title {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
 }
