--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -10,6 +10,7 @@
           <div class="buttons text-center">
             <% if logged_in? %>
               <%= render 'ownerships/want_button', item: @item %>
+              <%= render 'ownerships/have_button', item: @item %>
             <% end %>
           </div>
         </div>
@@ -25,7 +26,7 @@
         </div>
         <div class="panel-body">
           <% @want_users.each do |user| %>
-            <%= link_to user.name, user_path(user) %>
+            <%= link_to user.name, user %>
           <% end %>
         </div>
       </div>
@@ -36,6 +37,9 @@
           Haveしたユーザ
         </div>
         <div class="panel-body">
+          <% @have_users.each do |user| %>
+            <%= link_to user.name, user %>
+          <% end %> 
         </div>
       </div>
     </div>
